Fixed text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,6 @@ body {
 
 h1 {
   font-size: 48px;
-  text-align: center;
 }
 
 h2 {
